[package]
name = "pack-rs"
version = "0.1.0"
authors = ["Not-Nik <nik.wipper@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustvarints = { git = "https://github.com/Not-Nik/rustvarints" }
ruststreams = { git = "https://github.com/Not-Nik/ruststreams" }
libflate = "1.0.2"